# agent-dev-handbook

./: .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  main.py  pyproject.toml
.roo/rules-architect/: AGENTS.md
.roo/rules-ask/: AGENTS.md
.roo/rules-code/: AGENTS.md
.roo/rules-debug/: AGENTS.md
examples/: README.md
src/agent_dev_handbook/adk/examples/: callback_inspector.py  custom_agent.py  dummy_agent.py  run_callback_inspector.py  run_dummy_agent.py  test_dynamic_multiturn.py
src/agent_dev_handbook/adk/notes/: base_agent_notes.md  callbacks_reference.md  custom_agent_implementation_guide.md  dummy_agent_guide.md  dynamic_tools_and_prompts.md  exploring_adk_internals.md  performance_considerations.md  why_events_in_adk.md
src/agent_dev_handbook/langgraph/examples/: workflow_vs_agent_pattern.py
src/agent_dev_handbook/langgraph/notes/: langgraph_basics.md
src/edd_handbook/: __init__.py
src/edd_handbook/agents/: __init__.py
src/edd_handbook/agents/google_adk/: __init__.py
src/edd_handbook/agents/langgraph/: __init__.py
src/edd_handbook/evaluation/: __init__.py
src/edd_handbook/evaluation/benchmarks/: __init__.py
src/edd_handbook/evaluation/metrics/: __init__.py
src/edd_handbook/utils/: __init__.py
